--- a/index.html
+++ b/index.html
@@ -7,5 +7,13 @@
 </head>
 <body>
     <h1>Il mio Viaggio a Londra</h1>
+    <div>
+    <!--Immagini ruota panoramica-->
+    <img src="./Img/pexels-bill-emrich-230794-0.jpg" alt="Ruota panoramica pt.1">
+    <img src="./Img/pexels-bill-emrich-230794-1.jpg" alt="Ruota panoramica pt.2">
+    <img src="./Img/pexels-bill-emrich-230794-2.jpg" alt="Ruota panoramica pt.3">
+    <hr>
+    </div>
+    
 </body>
 </html>
