[FIX] dividing line position in index.html

--- a/index.html
+++ b/index.html
@@ -12,8 +12,10 @@
     <img src="./Img/pexels-bill-emrich-230794-0.jpg" alt="Ruota panoramica pt.1">
     <img src="./Img/pexels-bill-emrich-230794-1.jpg" alt="Ruota panoramica pt.2">
     <img src="./Img/pexels-bill-emrich-230794-2.jpg" alt="Ruota panoramica pt.3">
-    <hr>
     </div>
-    
+    <hr>
+    <div>
+
+    </div>
 </body>
 </html>
