--- a/index.html
+++ b/index.html
@@ -15,7 +15,41 @@
     </div>
     <hr>
     <div>
-
+        <h2>Le mie spese</h2>
+        <!--inizio della tabella-->
+        <table>
+            <thead>
+                <tr>
+                    <td><strong>Numero</strong></td>
+                    <td><strong>Descrizione</strong></td>
+                    <td><strong>Costo</strong></td>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>1</td>
+                    <td>Biglietto Aereo</td>
+                    <td>120</td>
+                </tr>
+                <tr>
+                    <td>1</td>
+                    <td>Biglietto Aereo</td>
+                    <td>120</td>
+                </tr>
+                <tr>
+                    <td>1</td>
+                    <td>Biglietto Aereo</td>
+                    <td>120</td>
+                </tr>
+            </tbody>
+            <tfoot>
+                <tr>
+                    <td>Totale</td>
+                    <td>360</td>
+                </tr>
+            </tfoot>
+        </table>
     </div>
+    <hr>
 </body>
 </html>
