--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             </tbody>
             <tfoot>
                 <tr>
-                    <td>Totale</td>
+                    <td colspan="2">Totale</td>
                     <td>360&euro;</td>
                 </tr>
             </tfoot>
