[UPD] Added structure for lists and photo in index.html

--- a/index.html
+++ b/index.html
@@ -51,5 +51,17 @@
         </table>
     </div>
     <hr>
+    <div>
+        <!--Inizio Prima lista-->
+    </div>
+    <hr>
+    <div>
+        <!--Inizio Seconda Lista-->
+    </div>
+    <hr>
+    <div>
+        <!--Immagini Londra-->
+    </div>
+    <!--Fine-->
 </body>
 </html>
