[UPD] Added titles for the three last paragraphs in index.html

--- a/index.html
+++ b/index.html
@@ -52,14 +52,17 @@
     </div>
     <hr>
     <div>
+        <h3>Cose da fare</h3>
         <!--Inizio Prima lista-->
     </div>
     <hr>
     <div>
+        <h3>Info utili:</h3>
         <!--Inizio Seconda Lista-->
     </div>
     <hr>
     <div>
+        <h3>Le foto</h3>
         <!--Immagini Londra-->
     </div>
     <!--Fine-->
