--- a/index.html
+++ b/index.html
@@ -55,10 +55,10 @@
         <h3>Cose da fare</h3>
         <!--Inizio Prima lista-->
         <ul>
-            <li>Visitare la Tower of London</li>
-            <li>Visitare Greenwich</li>
-            <li>Ascoltare un artista di strada a Covent Garden</li>
-            <li>Mangiare il tipico Fish and Chips inglese</li>
+            <li>Visitare la Tower of London &cross;</li>
+            <li>Visitare Greenwich &checkmark;</li>
+            <li>Ascoltare un artista di strada a Covent Garden &checkmark;</li>
+            <li>Mangiare il tipico Fish and Chips inglese &cross;</li>
         </ul>
     </div>
     <hr>
