--- a/index.html
+++ b/index.html
@@ -91,6 +91,8 @@
     <div>
         <h3>Le foto</h3>
         <!--Immagini Londra-->
+        <img src="https://www.abta.com/sites/default/files/styles/large/public/media/uploads/london-400x400-compressor_0.jpg" alt="Londra, la mia prima foto!">
+        <img src="https://imgc.allpostersimages.com/img/posters/evening-tower-bridge-and-river-thames-london_u-L-P2QVZJ0.jpg?artPerspective=n" alt="Tower Bridge, scatto serale sul fiume!">
     </div>
     <!--Fine-->
 </body>
